# lynxkite

./: .earthlyignore  .eslintrc.yaml  .gitattributes  .gitignore  .pep8  .sbtopts  .scalafmt.conf  .scalariform.conf  .stage.sh  .test_backend.sh  .test_frontend.sh  CHANGELOG  CHANGELOG.md  Earthfile  Makefile  README.md  SETUP_DOCKER.md  batch.sh  build.sbt  conda-env.sh  conda-env.yml  dev_stage.sh  ec2_run.sh  emr_ecosystem.py  grunt.sh  gulp.sh  javascript-dependency-licenses.md  javascript-dependency-licenses.txt  kiterc_template  lk_config.sh  persistent.sh  prod_stage.sh  public  python_requirements.txt  python_requirements_cuda.txt  python_requirements_testing.txt  quick_run.sh  release.sh  run.sh  scala-dependency-licenses.md  (+13 more)
app/: Global.scala
benchmarks/: testsize.sh
built-ins/: bar-chart  (+8 more)
python/remote_api/: .gitignore  README.md  lynx_versioning.py  pyproject.toml  release.sh  setup.py  test.sh  version
python/remote_api/managed_tests/: run.sh  test_start_stop.py
python/remote_api/src/lynx/: kite.py  operations.py  steiner.py
python/remote_api/tests/: api_test_in_docker.py  example_start_stop.py  test_cleaner.py  test_download.py  test_external_computation.py  test_hive_export.py  test_spark_conversion.py  test_sql_shorthand.py  test_start_stop.py  test_subworkspace_decorator.py  test_tutorials.py  test_workspace.py  test_workspace_builder.py  test_workspace_decorator.py
python/remote_api/tests/data/: 03_Airlines_Edge.csv  03_Airlines_Vertex.csv  beno_facebook_edges.csv  beno_facebook_vertices.csv  tutorial-02-test.yaml  tutorial-03-test.yaml
(+3148 files in other folders)
